[package]
name = "rust_cbor_cose_ecies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium = "0.2"
cose = "0.4"
ecies = "0.2"
rand = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_cbor = "0.11"
